--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* #root{
+  position: relative;
+  /* display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center; 
+  } */
