--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,9 @@ code {
   /* display: flex;
   justify-content: center;
   align-content: center;
-  align-items: center; 
+  align-items: center;
   } */
+button {
+  background: white;
+  border-radius: 10px;
+}
