--- a/src/views/components/BackgroundImage/style.css
+++ b/src/views/components/BackgroundImage/style.css
@@ -12,3 +12,12 @@
   min-width: 100%;
   min-height: 100%;
 }
+.nextButtom{
+  /* float: right; */
+  position: absolute;
+  top:10px;
+  right: 0;
+}
+.disable{
+  visibility: hidden;
+}
